# RayMarching

./: .clang-format  CMakeLists.txt  FPSLimiter.cpp  FPSLimiter.h  LICENSE  README.md  main.cpp
SDL2/lib/cmake/SDL2/: SDL2Targets-noconfig.cmake  SDL2Targets.cmake
SDL2/lib/pkgconfig/: sdl2.pc
SDL2/lib/x86_64-linux-gnu/cmake/glm/: glmConfig.cmake
SDL2/lib/x86_64-linux-gnu/pkgconfig/: glm.pc
UI/: CameraPanel.cpp  CameraPanel.h  FPSPanel.cpp  FPSPanel.h  GPUPanel.cpp  GPUPanel.h  KeyboardHandler.cpp  KeyboardHandler.h  MaterialPanel.cpp  MaterialPanel.h  Panel.cpp  Panel.h  RenderSettingsPanel.cpp  RenderSettingsPanel.h  ScenePanel.cpp  ScenePanel.h  UI.cpp  UI.h
assets/: materials.json
assets/scenes/: scene1.json  scene2.json  scene3.json  scene4.json  scene_csg.json  scene_mirror.json  scene_spheres.json
common/: GlslShaderLoader.cpp  GlslShaderLoader.h  gl_utils.cpp  gl_utils.h  shader_literals.h
include/: Camera.cpp  Camera.h  argparse.hpp
include/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
ray_marching/: CSGTree.cpp  CSGTree.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  RawConversion.h  RayMarcher.cpp  RayMarcher.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  inc_CSG_operations.glsl  inc_CSG_tree.glsl  inc_fractals.glsl  inc_rm_types.glsl  inc_rm_uniforms.glsl  inc_signed_distance_functions.glsl  inc_utils.glsl  ray_marcher.comp  ray_marching_stage1.comp  ray_marching_stage2.comp  render.frag  render.vert
ray_marching/CSG/: CSGCommon.h  CSGOperations.cpp  CSGOperations.h  CSGOperationsFunctions.h  CSGShapes.cpp  CSGShapes.h  CSGTree.cpp  CSGTree.h  SignedDistanceFunctions.h
simulation/: PhysicsObject.cpp  PhysicsObject.h  PhysicsSimulator.cpp  PhysicsSimulator.h
utils/config/: Config.h  Config.tpp  JsonConfig.h  JsonConfig.tpp  XmlConfig.h  XmlConfig.tpp
utils/containers/: BinarySearchTree.h  Tree.h
utils/containers/detail/: Tree.tpp  Tree_detail.tpp  Tree_node.tpp
utils/error_handling/: exceptions.cpp  exceptions.h
utils/graphics/: BoundingBox.h  BoundingBox.tpp  BoundingSphere.h  BoundingSphere.tpp  Geometry.cpp  Geometry.h  ViewFrustum.cpp  ViewFrustum.h  common.h
utils/include/fmt/: chrono.h  color.h  compile.h  core.h  format-inl.h  format.cc  format.h  posix.cc  posix.h  printf.h  safe-duration-cast.h
utils/include/glm/detail/: _swizzle.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.inl  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_matrix.inl  func_matrix_simd.inl  qualifier.hpp  setup.hpp
utils/include/nlohmann/: adl_serializer.hpp  json.hpp  json_fwd.hpp
utils/include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  value_t.hpp
utils/include/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
utils/include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
utils/include/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  json_reverse_iterator.hpp  primitive_iterator.hpp
utils/include/nlohmann/detail/meta/: cpp_future.hpp  detected.hpp  is_sax.hpp  type_traits.hpp  void_t.hpp
utils/include/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
utils/include/tinyxml2/: tinyxml2.cpp  tinyxml2.h
utils/io/: logger.h  logger.tpp  print.h
utils/meta/: chrono.h  glm.h  iterable.h  meta.h  specializations.h  string.h  tuple_utils.h
utils/parallel/: SafeQueue.h  ThreadPool.h
utils/reactive/: Binding.h  OneWayBinding.h  TwoWayBinding.h
utils/time/: FPSCounter.cpp  FPSCounter.h  now.h
utils/types/: CachedProperty.h  CachedProperty.tpp  Lazy.h  Lazy.tpp  Range.h  Range.tpp  Zip.h  Zip.tpp
utils/various/: ByteLiterals.h  StringUtils.h  StringUtils.tpp  XMLSerialisation.h  XMLUtils.cpp  XMLUtils.h  isin.h  loc_assert.h  overload.h
